# Snake_Game_RL

./: BUILD_WINDOWS.md  CMakeLists.txt  LICENSE  Makefile  README.md  README_refactored.md  SUCCESS_SUMMARY.md  build_and_run.ps1  build_windows.bat  cpp_refactor_notes.ipynb  debug_coords.cpp  debug_coords_new.cpp  debug_wrap.cpp
include/: apple.h  common_types.h  game_controller.h  graphics.h  snake.h
include/rl/: q_learning_agent.h  rl_interface.h
src/: apple.cpp  game_controller.cpp  graphics.cpp  main.cpp  main_refactored.cpp  rl_example.cpp  snake.cpp
src/apple/: apple.cpp  apple.h
src/game/: game.cpp  game.h
src/rl/: q_learning_agent.cpp  rl_interface.cpp
src/snake/: snake.cpp  snake.h
